service.yml
apiVersion: v1
kind: Service
metadata:
  name: entegral
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 5000
  selector:
    app: entegral
